--- a/react-practice/src/styles/Button.scss
+++ b/react-practice/src/styles/Button.scss
@@ -1,5 +1,27 @@
 $blue: #228be6; // 변수선언시 $ 앞에 붙이기
+$gray: #495057;
+$pink: #f06509;
 
+//mixin
+
+@mixin button-color($color) {
+  background: $color;
+  &:hover {
+    background: lighten($color, 10%);
+  }
+  &:active {
+    background: darken($color, 10%);
+  }
+  &.outline {
+    color: $color;
+    background: transparent;
+    border: 1px solid $color;
+    &:hover {
+      background: $color;
+      color: white;
+    }
+  }
+}
 .Button {
   display: inline-flex;
   justify-content: center;
@@ -10,16 +32,40 @@ $blue: #228be6; // 변수선언시 $ 앞에 붙이기
   border-radius: 4px;
   cursor: pointer;
 
-  height: 2.25rem;
   padding-left: 1rem;
   padding-right: 1rem;
-  font-size: 1rem;
+  margin-right: 1px;
 
-  background: $blue;
-  &:hover {
-    background: ligten($blue, 10%);
+  &.medium {
+    height: 2.25rem;
+
+    font-size: 1rem;
   }
-  &:active {
-    background: daren($blue, 10%);
+  &.large {
+    height: 3rem;
+
+    font-size: 1.25rem;
+  }
+  &.small {
+    height: 1.75rem;
+    font-size: 0.875rem;
+  }
+
+  &.blue {
+    @include button-color($blue);
+  }
+  &.gray {
+    @include button-color($gray);
+  }
+  &.pink {
+    @include button-color($pink);
+  }
+  &.fullWidth {
+    width: 100%;
+    justify-content: center;
+    & + & {
+      margin-left: 0;
+      margin-top: 1rem;
+    }
   }
 }
